tests/paczka1/fuzzy1/29621120.err
Error in line 1: A945 A844 69,8
Error in line 4: A945 A945 11,5
Error in line 16: pi7LrzA7IC S657 93,3
